chore: index ajuste

--- a/ny/group3/index.html
+++ b/ny/group3/index.html
@@ -444,54 +444,65 @@
             <h1 class="title">
                 <Strong>Features</Strong>
             </h1>
-            <div>
-                <div class="container__left">
+            <div class="cont-5">
+                <div class="container__right">
+
                     <img class="img__features" src="Imagens/featrures.jpg" alt="">
                     <p class="txt">
                     <div class="container__txt">
                         <div>
-                            <h2 style="margin: 0;"><strong>How Basquiat and Street Artists Left Their Mark on Hip-Hop
+                            <h2 style="margin: 0;"><strong>How Basquiat and Street Artists Left Their Mark on
+                                    Hip-Hop
                                     Culture</strong></h2>
                         </div><br>
                         A dozen artists, most of them Black or Latino, are the subjects of an exhibition
                         that aims to correct oversights in art history.
                         </p>
+
                     </div>
                 </div>
-                
-                <div class="tabela">
-                    <div class="container__right">
-                        <div class="container__right"></div>
-                        <img class="img" src="Imagens/book.png" alt="">
-                        <p>
-                        <div><strong>Book Review: A Fugitive in the Change of Life</strong></div><br>
-                        For the restless heroine of Dana Spiotta’s novel “Wayward,”
-                        menopause is reason enough to re-evaluate everything.
-                        Genevieve Ko’s Rice Krispies treats with chocolate and pretzels.</p>
-                        <img class="img" src="Imagens/conan.png" alt="">
-                        <p>
-                        <div><strong>20 Summer Potluck Ideas Our Food Staff Swears By</strong></div><br>
-                        Don’t be stumped by what to take to the picnic: Here are the recipes
-                        the staff of the Food section and NYT Cooking turn to again and again.</p>
-                    </div>
-                    <div class="container__right">
-                        <img class="img" src="Imagens/complicate.jpg" alt="">
-                        <p>
-                        <div><strong>A Complicated Collaboration for a New ‘Enemy of the People’</strong></div>
-                        <br>
-                        Without seeing a script, Ann Dowd jumped at the chance
-                        to work with Robert Icke on his solo adaptation of the Ibsen classic.
-                        Then the debates began.</p>
+                <div class="container__right">
 
-                        <img class="img" src="Imagens/20summer.jpg" alt="">
-                        <p>
-                        <div><strong>Best of Late Night: Conan O’Brien Bids Farewell</strong></div><br>
-                        After 28 years on late-night television and 11 years on TBS, the
-                        comedian is moving on to HBO Max.</p>
-                    </div>
+                    <img class="img" src="Imagens/book.png" alt="">
+                    <p>
+                    <div><strong>Book Review: A Fugitive in the Change of Life</strong></div><br>
+                    For the restless heroine of Dana Spiotta’s novel “Wayward,”
+                    menopause is reason enough to re-evaluate everything.
+                    Genevieve Ko’s Rice Krispies treats with chocolate and pretzels.</p>
+                </div>
+                <div class="container__right">
+
+                    <img class="img" src="Imagens/conan.png" alt="">
+                    <p>
+                    <div><strong>20 Summer Potluck Ideas Our Food Staff Swears By</strong></div><br>
+                    Don’t be stumped by what to take to the picnic: Here are the recipes
+                    the staff of the Food section and NYT Cooking turn to again and again.</p>
+
+                </div>
+                <div class="container__right">
+
+                    <img class="img" src="Imagens/complicate.jpg" alt="">
+                    <p>
+                    <div><strong>A Complicated Collaboration for a New ‘Enemy of the People’</strong></div>
+                    <br>
+                    Without seeing a script, Ann Dowd jumped at the chance
+                    to work with Robert Icke on his solo adaptation of the Ibsen classic.
+                    Then the debates began.</p>
+
+                </div>
+                <div class="container__right">
+
+                    <img class="img" src="Imagens/20summer.jpg" alt="">
+                    <p>
+                    <div><strong>Best of Late Night: Conan O’Brien Bids Farewell</strong></div><br>
+                    After 28 years on late-night television and 11 years on TBS, the
+                    comedian is moving on to HBO Max.</p>
+
                 </div>
             </div>
-            
+
+            </div>
+
         </section-5>
         <hr>
         <section-6>
@@ -715,7 +726,7 @@
                         <li><a href="HTML/pag2.html">Manage My Account</a>
                         <li><a href="HTML/pag2.html">NYTLicensing</a>
                     </ul>
-                    <ul>
+                    <ul class="SUBCRIBE">
                         <h4>SUBCRIBE</h4>
                         <li><a href="HTML/pag2.html" class="link"><strong>Home Delivery</strong></a>
                         <li><a href="HTML/pag2.html"><strong>Digital Subscriptions</strong></a>
@@ -756,4 +767,5 @@
     </main>
     <script src="JS/main.js" type="module"></script>
 </body>
+
 </html>
