Cria a função e slider para as imagens do first page news.

--- a/ny/group2/index.html
+++ b/ny/group2/index.html
@@ -25,33 +25,35 @@
         </div>
         <nav class="navbar">
             <ul class="navigation-menu-header">
-                <li class="navigations-header"><a href="#">World</a></li>
-                <li class="navigations-header"><a href="#">U.S.</a></li>
-                <li class="navigations-header"><a href="#">Politcs</a></li>
-                <li class="navigations-header"><a href="#">N.Y.</a></li>
-                <li class="navigations-header"><a href="#">Business</a></li>
-                <li class="navigations-header"><a href="#">Opinion</a></li>
-                <li class="navigations-header"><a href="#">Tech</a></li>
-                <li class="navigations-header"><a href="#">Science</a></li>
-                <li class="navigations-header"><a href="#">Health</a></li>
-                <li class="navigations-header"><a href="#">Sports</a></li>
-                <li class="navigations-header"><a href="#">Arts</a></li>
-                <li class="navigations-header"><a href="#">Book</a></li>
-                <li class="navigations-header"><a href="#">Style</a></li>
-                <li class="navigations-header"><a href="#">Food</a></li>
-                <li class="navigations-header"><a href="#">Travel</a></li>
-                <li class="navigations-header"><a href="#">Magazine</a></li>
-                <li class="navigations-header"><a href="#">T Magazine</a></li>
-                <li class="navigations-header"><a href="#">Real Estate</a></li>
-                <li class="navigations-header"><a href="#">Video</a></li>
+                <li class="navigations-header"><a href="secondpage.html">World</a></li>
+                <li class="navigations-header"><a href="secondpage.html">U.S.</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Politcs</a></li>
+                <li class="navigations-header"><a href="secondpage.html">N.Y.</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Business</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Opinion</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Tech</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Science</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Health</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Sports</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Arts</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Book</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Style</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Food</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Travel</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Magazine</a></li>
+                <li class="navigations-header"><a href="secondpage.html">T Magazine</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Real Estate</a></li>
+                <li class="navigations-header"><a href="secondpage.html">Video</a></li>
             </ul>
         </nav>
         <div class="container-links-header">
             <div class="links-header">
                 <div>
-                    <img class="img-header"
-                        src="https://static01.nyt.com/images/2017/01/29/podcasts/the-daily-album-art/the-daily-album-art-square320-v4.png"
-                        alt="">
+                    <a href="#">
+                        <img class="img-header"
+                            src="https://static01.nyt.com/images/2017/01/29/podcasts/the-daily-album-art/the-daily-album-art-square320-v4.png"
+                            alt="">
+                    </a>
                 </div>
                 <div class="text">
                     <h3 class="text-links-header__h3">Listen to 'The Daily'</h3>
@@ -95,8 +97,8 @@
                 <p class="live-updates__p">Live Updates on the Primaries</p>
                 <ul class="live-updates__ul">
                     <li class="live-updates__ul--li">
-                        <a href="#" class="live-updates__ul--li--a">
-                            <img src="" alt="Imagem de random 1" srcset="" class="live-updates__ul--img">
+                        <a href="secondpage.html" class="live-updates__ul--li--a">
+                            <img src="" alt="Imagem de random 1" srcset="" class="live-updates__ul--img active" _blank>
                         </a>
                     </li>
                     <li class="live-updates__ul--li">
@@ -111,7 +113,7 @@
                     </li>
                     <li class="live-updates__ul--li">
                         <a href="#" class="live-updates__ul--li--a">
-                            <img src="" alt="Imagem de random 1" srcset="" class="live-updates__ul--img active">
+                            <img src="" alt="Imagem de random 1" srcset="" class="live-updates__ul--img">
                         </a>
                     </li>
                     <li class="live-updates__ul--li">
