--- a/projects/crypto-currency/iluminados/app/public/index.html
+++ b/projects/crypto-currency/iluminados/app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 
 <head>
   <meta charset="utf-8" />
@@ -8,7 +8,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Martel&family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="./mario-coin.png" sizes="16x16" />
   <title>Iluminados Coin-Market</title>
 </head>
 
