--- a/projects/crypto-currency/destemidos/App/public/index.html
+++ b/projects/crypto-currency/destemidos/App/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="shortcut icon" href="https://image.flaticon.com/icons/png/512/2586/2586092.png" type="image/x-icon">
+    <title>Destemidos</title>
 </head>
 <body>
     <div id="root">
