--- a/projects/generic-trello/superman/app/public/index.html
+++ b/projects/generic-trello/superman/app/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" href="https://cdn.iconscout.com/icon/free/png-256/superman-5-282299.png"/>
   <title>Superman Trello</title>
 </head>
 
