Criando tela de login

--- a/projects/generic-trello/batman/app/public/index.html
+++ b/projects/generic-trello/batman/app/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React App</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="icon" type="image/png" href="https://iconarchive.com/download/i90143/icons8/windows-8/Cinema-Batman-New.ico" sizes="16x16" />
+    <title>Batman Trello</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
