--- a/projects/generic-trello/superman/app/public/index.html
+++ b/projects/generic-trello/superman/app/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="https://cdn.iconscout.com/icon/free/png-256/superman-5-282299.png"/>
-  <title>Superman Trello</title>
+  <title>SuperTrello</title>
 </head>
 
 <body>
