--- a/final-projects/rafael/public/index.html
+++ b/final-projects/rafael/public/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8" />  
-    <link rel="shortcut icon" type="image/png/ico" href="../src/Assets/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="Rafael"
